# yttrium

./: .env  Cargo.toml  test.db
client/: Cargo.toml
client/src/: input.rs  main.rs  menu.rs  start_menu.rs
db/: yttrium.db
frontend/: chat.js  index.html  login.html  login.js  script.js  test.html
frontend/styles/: chat.css  homepage.css  style.css
server/: Cargo.toml
server/src/: chat.rs  cors.rs  main.rs  message.rs  user.rs  web_handler.rs
src/: chat.rs  db.rs  main.rs  message.rs  user.rs
