[package]
name = "yttrium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "sqlite", "uuid", "macros" ] }
diesel = { version = "2.1.4", features = [ "sqlite" ] }
tokio = { version = "1.34" }

rocket = "=0.5.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"

rand = "0.8.4"
rand_distr = "0.4.3"
